--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+# Ignore NetCDF or binary output
+*.nc
+*.h5
+*.bin
+*.out
+
+# Ignore VSCode or JetBrains project files
+.vscode/
+.idea/
+
+# Ignore input/output data directories
+input_data
+output_data
