--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
